--- a/templates/citizen_project/_email_summary.html.twig
+++ b/templates/citizen_project/_email_summary.html.twig
@@ -1,23 +1,12 @@
 <div>
     {% for citizen_project in citizen_projects %}
     <div>
-       <a href="{{ url('app_citizen_project_show', { slug: citizen_project.slug }) }}" title="{{ citizen_project.name }}">
+       <a style="color:#185fca;text-decoration:none;" href="{{ url('app_citizen_project_show', { slug: citizen_project.slug }) }}" title="{{ citizen_project.name }}">
            <h2>{{ citizen_project.name }}</h2>
        </a>
        <div>{{ citizen_project.subtitle }}</div>
        <div>{{ citizen_project.cityName }}</div>
     </div>
+    <br/>
     {% endfor %}
-    <br/>
-    <div>
-        <a href="{{ url('app_search_citizen_projects') }}">Voir tous les projets citoyens</a>
-    </div>
-    <br/>
-    <div>
-        Vous pouvez à tout moment gérer vos notifications <a href="{{ url('app_user_set_email_notifications') }}">ici</a>
-        <br/>
-        <br/>
-        À bientôt,<br/>
-        L’équipe Projets Citoyens de La République En Marche
-    </div>
 </div>
