--- a/templates/citizen_action/show.html.twig
+++ b/templates/citizen_action/show.html.twig
@@ -55,10 +55,10 @@
 
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <a href="{{ path('app_citizen_action_list_participants', { slug: citizen_action.slug }) }}">
-                        <h3 class="text--medium">{{ 'citizen_action.participants_count'|transchoice(participants|length) }}</h3>
+                        <h3 class="text--medium event-attendees">{{ 'citizen_action.participants_count'|transchoice(participants|length) }}</h3>
                     </a>
                 {% else %}
-                    <h3 class="text--medium">{{ 'citizen_action.participants_count'|transchoice(participants|length) }}</h3>
+                    <h3 class="text--medium event-attendees">{{ 'citizen_action.participants_count'|transchoice(participants|length) }}</h3>
                 {% endif %}
 
                 <ul>
