--- a/templates/citizen_project/_layout.html.twig
+++ b/templates/citizen_project/_layout.html.twig
@@ -65,7 +65,7 @@
                                     </button>
 
                                     <div class="text--white text--margin-right">
-                                        <a href="{{ path('app_user_login') }}" class="link--white">Connectez-vous</a>
+                                        <a href="{{ login_path_for_anonymous_follower() }}" class="link--white">Connectez-vous</a>
                                          pour rejoindre ce projet citoyen
                                     </div>
                                 {% elseif can_follow_citizen_project(citizen_project) %}
