--- a/templates/committee/timeline/_event.html.twig
+++ b/templates/committee/timeline/_event.html.twig
@@ -38,7 +38,7 @@
             </li>
             <li class="icon--with-text text--body">
                 {{ include('components/participants.html.twig') }}
-                <span class="committee-event-attendees">
+                <span class="committee-event-attendees event-attendees">
                     {{ item.event.participantsCount }} {{ 'capacity'|transchoice(item.event.participantsCount)  }}
                 </span>
             </li>
