--- a/templates/admin/media/mosaic.html.twig
+++ b/templates/admin/media/mosaic.html.twig
@@ -1,11 +1,11 @@
 {% extends 'SonataAdminBundle:CRUD:list_outer_rows_mosaic.html.twig' %}
 
 {% block sonata_mosaic_background %}
-    <img src="{{ media_asset(object, {'w': 400}) }}" />
+    <img src="{{ media_asset(object.media, {'w': 400}) }}" />
 {% endblock %}
 
 {% block sonata_mosaic_default_view '' %}
 
 {% block sonata_mosaic_hover_view %}
-    <span class="label label-primary pull-right">{{ object.path }}</span>
+    <span class="label label-primary pull-right">{{ object.media.path }}</span>
 {% endblock %}
