[ch3176] Resent email validation and notify the user to check his mailbox
https://app.clubhouse.io/enmarche/story/3176/mettre-un-message-d-erreur-avec-proposition-de-renvoi-d-e-mail-lorsqu-un-nouvel-adh%C3%A9rent-n-a-pas-valid%C3%A9-son-adresse-mail

--- a/templates/security/adherent_login.html.twig
+++ b/templates/security/adherent_login.html.twig
@@ -8,7 +8,7 @@
 
         {% if error %}
             <div id="auth-error" class="form__error">
-                {{- error.messageKey|trans(error.messageData) -}}
+                {{- error.messageKey|trans(error.messageData)|raw -}}
             </div>
         {% endif %}
 
